Bug 1764936 - Apply empty clip if clip-path creation fails r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D148134